# migrate

./: .cvsignore  .gitignore  AUTHORS  BUGS  COB-CVS2GIT.AUTHORS-ORIG  COB-CVS2GIT.sh  COB-SVN2GIT.sh  COPYING.LIB  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  README.CVS  STATUS  THANKS  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  announce.md  authors-cvs.list  authors-svn.list  autogen.sh  bfg.sh  cob-config.in  cob.m4  cob.pc.in  common  compile  config.h.in  configure  configure.ac  cpucheck.c  create_win_dist.sh  cvs2git.sh  gnucobol.spec  libcob.conf  (+8 more)
build_aux/: ChangeLog  bootstrap  config.guess
build_windows/: ChangeLog.txt  README  README.txt  config.h.bdb.win  config.h.in  config.h.tmpl  config.h.vb.win  defaults.h.in  defaults.h.tmpl  makebisonflex.bat  makedist.bat  set_env_vs.bat  set_env_vs_dist.bat  set_env_vs_dist_x64.bat  set_env_vs_x64.bat  version_cobc.rc  version_cobcrun.rc  version_libcob.rc
build_windows/vc10/: cobc.vcxproj  cobcrun.vcxproj  defaults.h  libcob.vcxproj  libsupport.vcxproj  libsupport.vcxproj.filters
build_windows/vc11/: cobc.vcxproj  cobcrun.vcxproj  defaults.h  (+1 more)
cobc/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  bytegen.c  call.def  cobc.1  cobc.c  cobc.h  codegen.c  codegen.h  codeoptim.c  config.c  config.def  error.c  error.h  field.c  flag.def  functions.h  inline.c  parser.c  parser.h  parser.y  pplex.c  pplex.l  ppparse.c  ppparse.def  ppparse.h  ppparse.y  reserved.c  reserved.h  scanner.c  scanner.h  scanner.l  spec.c  tree.c  tree.h  tree.txt  typeck.c  usage.def  (+1 more)
cobpp/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  README  cobpp.c  cobpp.h  parser.y  scanner.h  scanner.l
config/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  acu-strict.conf  acu.conf  acu.words  bs2000-strict.conf  bs2000.conf  bs2000.words  cobol2002.conf  cobol2002.words  cobol2014.conf  cobol2014.words  cobol85.conf  cobol85.words  default.conf  default.inc  gnu.conf  ibm-strict.conf  ibm.conf  ibm.words  lax.conf-inc  mf-strict.conf  mf.conf  mf.words  mvs-strict.conf  mvs.conf  mvs.words  rm-strict.conf  rm.conf  rm.words  runtime.cfg  v023.conf  xopen.conf
copy/: ChangeLog  Makefile.am  Makefile.in  screenio.cpy
debian/: README.Debian  changelog  cobc.files  conffiles  control  copyright  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  ex.doc-base.package  files  info  libcob0.dirs  libcob0.files  manpage.1.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: ChangeLog  Makefile.am  Makefile.in  README  c-cobol.txt  cbchelp.tex  cbconf.tex  cbhelp.tex  cbintr.tex  cbmnem.tex  cbrese.tex  cbrunt.tex  cbsyst.tex  changes.txt  cobcinfo.sh  compile.txt  gnucobol.info  gnucobol.texi  stamp-vti  version.texi
extras/: Makefile.am  Makefile.in  README
lib/: ChangeLog  Makefile.am  Makefile.in  dummymac.c  getopt.c  getopt1.c  gettext.h
libcob/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  _libcob.h  basicio.c  bcd.c  bcd.h  byteorder.h  byteswap.h  call.c  call.h  cobconfig.h.in  cobgetopt.c  coblocal.h  cobmove.c  codegen.h  common.c  common.h  cond.c  decimal.c  decimal.h  dyncall.c  exception.def  fileio.c  fileio.h  general.c  intrinsic.c  intrinsic.h  libcob.h  ltdl.c  math.c  math_bcd.c  math_decimal.c  math_double.c  mcmath.c  move.c  move.h  numeric.c  numeric.h  (+11 more)
m4/: .cvsignore  cattribute.m4
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  gnu-cobol.pot  gnucobol.pot  it.po  ja.gmo  ja.po  nl.po  open-cobol.pot  pt.po  update_linguas.sh
redhat/: .cvsignore  open-cobol.spec.in
rpm/: open-cobol.spec.in
specs/: Makefile.am  cobol2002.spec  cobol85.spec  gnu.spec  mf.spec  mvs.spec
tests/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  atlocal.in  atlocal_valgrind  atlocal_win  binary.at  cobol2002-run  cobol2002-run-O  cobol2002-run.at  cobol2002-syntax  cobol2002-syntax.at  constant.at  data-rep  data-rep-O  data-rep.at  definition.at  display.at  entry.at  extension  extension-O  extension.at  fundamental.at  initialize.at  listings-sed.sh  misc.at  move.at  multiply.at  occurs.at  package.m4  packed.at  redef.at  redefines.at  ref-mod.at  reference.at  run  run-O  run.at  runtime.at  (+8 more)
tests/cobol2002-run.src/: copy.at  fundamental.at  initialize.at  misc.at  subscripts.at
tests/cobol2002-syntax.src/: definition.at  expression.at  move.at  multiply.at  redefines.at  value.at
tests/cobol85/: .cvsignore  ChangeLog  DB.txt  DBNOIX.txt  EXEC85.conf.in  IC.txt  IX.txt  Makefile.am  Makefile.in  NC.txt  README  RL.txt  SM.txt  SQ.txt  ST.txt  expand.pl  ifedit.sh  report.pl  summary.pl  summary.txt  summarynoix.txt
tests/data-rep.src/: binary.at  display.at  numeric-display.cob  numeric-dump.cob  packed.at  pointer.at
tests/extension.src/: extensions.at  return-code.at
tests/run.src/: accept.at  extensions.at  functions.at  fundamental.at  initialize.at  misc.at  ref-mod.at  return-code.at  subscripts.at
tests/syntax.src/: copy.at  definition.at  expression.at  move.at  multiply.at  occurs.at  redefines.at  set.at  subscripts.at  value.at
tests/testsuite.src/: configuration.at  data_binary.at  data_display.at  data_packed.at  data_pointer.at  listings-sed.sh  listings.at  run_accept.at  run_extensions.at  run_file.at  run_functions.at  run_fundamental.at  run_initialize.at  run_misc.at  run_refmod.at  run_reportwriter.at  run_returncode.at  run_subscripts.at  syn_copy.at  syn_definition.at  syn_file.at  syn_functions.at  syn_misc.at  syn_move.at  syn_multiply.at  syn_occurs.at  syn_redefines.at  syn_refmod.at  syn_reportwriter.at  syn_screen.at  syn_set.at  syn_subscripts.at  syn_value.at  used_binaries.at
testsuite/: ChangeLog  Makefile  Makefile.am  Makefile.in  README
testsuite/cobol85/: .cvsignore  EXEC85.conf.in  Makefile.am  Makefile.in  NC.txt  README  SM.txt  SQ.txt  ST.txt  expand.pl  report.pl  summary.old
texi/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  open-cobol.texi  version.texi
(+77 files in other folders)
